# scanning-robot

./: note
auto_run_scripts/: auto_debug.sh  autorun.sh  cartographer_run.sh  config.sh  laser_run.sh  nav_run.sh
azure_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
azure_ws/devel/include/azure_kinect_ros_driver/: SetExposureGain.h  SetExposureGainRequest.h  SetExposureGainResponse.h
azure_ws/devel/lib/azure_kinect_ros_driver/: node
azure_ws/devel/lib/pkgconfig/: azure_kinect_ros_driver.pc
azure_ws/devel/lib/python2.7/dist-packages/azure_kinect_ros_driver/srv/: _SetExposureGain.py  __init__.py
azure_ws/devel/share/azure_kinect_ros_driver/cmake/: azure_kinect_ros_driver-msg-paths.cmake  azure_kinect_ros_driverConfig.cmake
azure_ws/devel/share/common-lisp/ros/azure_kinect_ros_driver/srv/: SetExposureGain.lisp  _package.lisp  _package_SetExposureGain.lisp  azure_kinect_ros_driver-srv.asd
azure_ws/devel/share/gennodejs/ros/azure_kinect_ros_driver/srv/: SetExposureGain.js  _index.js
azure_ws/devel/share/roseus/ros/azure_kinect_ros_driver/: manifest.l
azure_ws/devel/share/roseus/ros/azure_kinect_ros_driver/srv/: SetExposureGain.l
move_ws/devel/: .catkin  local_setup.sh
move_ws/devel/lib/move/: move_node
move_ws/devel/lib/pkgconfig/: move.pc
move_ws/devel/share/move/cmake/: moveConfig.cmake
move_ws/src/move/: CMakeLists.txt  package.xml
move_ws/src/move/include/move/: Motor.h
move_ws/src/move/src/: Motor.cpp
mr_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
mr_ws/devel/lib/mapping_robot/: gui_node  recorder_node
mr_ws/devel/lib/pkgconfig/: mapping_robot.pc
mr_ws/devel/share/mapping_robot/cmake/: mapping_robotConfig.cmake
mr_ws/src/mapping_robot/: calibration.txt
mr_ws/src/mapping_robot/cartographer/: bag_demo_no_ui.launch  offline_no_ui.launch  offline_ui.launch  online.launch  online_no_ui.launch  online_ui.launch
mr_ws/src/mapping_robot/include/: BagParser.h  BagRecorder.h  Motor.h  Worker.h
mr_ws/src/mapping_robot/launch/: parse.launch
mr_ws/src/mapping_robot/src/: BagParser.cpp  BagRecorder.cpp  Camera.cpp  Worker.cpp  mainwindow.ui  pbstream_node.cpp
mr_ws/src/mapping_robot/third/nvdecoder/: CMakeLists.txt  decode.launch  package.xml
mr_ws/src/mapping_robot/third/nvdecoder/JPEGDecoder/: JPEGDecoderTest.cpp
navigation_ws/src/scanning_robot_nav/: CMakeLists.txt  package.xml
navigation_ws/src/scanning_robot_nav/launch/: gaboz_fake.launch  move_base.launch  scanning_robot_configuration.launch
navigation_ws/src/scanning_robot_nav/maps/: test_map.yaml
navigation_ws/src/scanning_robot_nav/param/: costmap_common_params.yaml
navigation_ws/src/scanning_robot_nav/src/: fake_odom_publisher.cpp
output/: test_map.pgm  test_map.yaml
pavo_ws/devel/: .catkin  .rosinstall  local_setup.sh
pavo_ws/devel/include/pavo_ros/: pavo_ros_cfgConfig.h
pavo_ws/devel/lib/pavo_ros/: pavo_pcd_node  pavo_scan_node
pavo_ws/devel/lib/pkgconfig/: pavo_ros.pc
pavo_ws/devel/lib/python2.7/dist-packages/pavo_ros/cfg/: pavo_ros_cfgConfig.py
pavo_ws/devel/share/pavo_ros/cmake/: pavo_rosConfig.cmake
pavo_ws/src/pavo_ros/launch/: pavo_scan.launch
pavo_ws/src/pavo_ros/sdk/src/: data_filters.cpp  pavo_driver.cpp
src/mapping_robot/: .gitmodules  CMakeLists.txt  README.md
src/mapping_robot/cartographer/: assets_writer.launch  assets_writer_2d.launch  assets_writer_backpack_2d.lua  assets_writer_ros_map.lua  bag_demo_ui.launch  demo.lua  demo.rviz  demo.urdf  offline.launch  online_no_ui.launch  online_ui.launch
src/mapping_robot/include/: Camera.h  Param.h  Utils.h  mainwindow.h
src/mapping_robot/launch/: gui_pc.launch  gui_tx2.launch  record.launch
src/mapping_robot/src/: Motor.cpp  gui_node.cpp  mainwindow.cpp  parser_node.cpp  recorder_node.cpp
src/mapping_robot/third/nvdecoder/: README.md  decoderROSWrapper.cpp
src/mapping_robot/third/nvdecoder/JPEGDecoder/: CMakeLists.txt  JPEGDecoder.cpp  JPEGDecoder.h
src/move/: CMakeLists.txt  package.xml
src/move/config/: my_robot_common.yaml
src/move/include/move/: generic_hw_control_loop.h  generic_hw_interface.h  my_robot_hw_interface.h  rrbot_hw_interface.h
src/move/launch/: hw_control.launch
src/move/src/: generic_hw_control_loop.cpp  generic_hw_interface.cpp  hw_node.cpp  move_node.cpp  rrbot_hw_insterface.cpp
src/nav/: CMakeLists.txt  package.xml
src/nav/launch/: configuration.launch  gaboz_fake.launch  move_base.launch
src/nav/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/nav/urdf/: demo.urdf
src/pavo_ros/sdk/include/: pavo_driver.h
